--- a/data/sources/agilni-cafe-praha.yaml
+++ b/data/sources/agilni-cafe-praha.yaml
@@ -79,3 +79,28 @@ series:
         url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/280441638/
         dtstart: 2021-09-08 18:00:00+02:00
         dtend: 2021-09-08 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 19, 2021, 6:00 PM: Příští Agilní Open Café alias setkání Agilních nadšenců bude ve virtuálním prostoru ve středu 19. května 2021 a bude na pozvání pro ty, kteří chtějí něčím zajímavým přispět'
+      og_title: Agilní Open Café Virtuálně – 19.5.2021
+      image: https://secure.meetupstatic.com/photos/event/2/a/9/3/600_465070899.jpeg
+      url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/277995118/
+      ical:
+        summary: Agilní Open Café Virtuálně – 19.5.2021
+        description: 'Agilni Open Cafe Praha
+
+          Wednesday, May 19 at 6:00 PM
+
+
+          Příští Agilní Open Café alias setkání Agilních nadšenců bude ve virtuálním prostoru ve středu 19. května 2021 a bude na pozvání pro ty, kteří chtějí n...
+
+
+          https://www.meetup.com/Agilni-Open-Cafe-Praha/events/277995118/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_277995118@meetup.com
+        url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/277995118/
+        dtstart: 2021-05-19 18:00:00+02:00
+        dtend: 2021-05-19 20:00:00+02:00
