--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -155,3 +155,103 @@ series:
         url: https://www.meetup.com/czskppug/events/tspxdsydccbrb/
         dtstart: 2022-01-13 17:00:00+01:00
         dtend: 2022-01-13 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 14, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Oct 14, 2021, 5:00 PM'
+      image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
+      url: https://www.meetup.com/czskppug/events/dgxdqsyccnbsb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, October 14 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/275722150/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dgxdqsyccnbsb@meetup.com
+        url: https://www.meetup.com/czskppug/events/275722150/
+        dtstart: 2021-10-14 17:00:00+02:00
+        dtend: 2021-10-14 19:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 11, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Nov 11, 2021, 5:00 PM'
+      image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
+      url: https://www.meetup.com/czskppug/events/dgxdqsyccpbpb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, November 11 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/275722152/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dgxdqsyccpbpb@meetup.com
+        url: https://www.meetup.com/czskppug/events/275722152/
+        dtstart: 2021-11-11 17:00:00+01:00
+        dtend: 2021-11-11 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Dec 9, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, po'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Dec 9, 2021, 5:00 PM'
+      image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
+      url: https://www.meetup.com/czskppug/events/dgxdqsyccqbmb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, December 9 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/275722156/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dgxdqsyccqbmb@meetup.com
+        url: https://www.meetup.com/czskppug/events/275722156/
+        dtstart: 2021-12-09 17:00:00+01:00
+        dtend: 2021-12-09 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Jan 13, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Jan 13, 2022, 5:00 PM'
+      image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
+      url: https://www.meetup.com/czskppug/events/dgxdqsydccbrb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, January 13 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/dgxdqsydccbrb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dgxdqsydccbrb@meetup.com
+        url: https://www.meetup.com/czskppug/events/dgxdqsydccbrb/
+        dtstart: 2022-01-13 17:00:00+01:00
+        dtend: 2022-01-13 19:00:00+01:00
