data: cron update

--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -121,7 +121,7 @@ series:
 
 
           https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/'
-        location: null
+        location: Online event
         geo:
           lat: 50.08
           lon: 14.43
