--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -55,3 +55,28 @@ series:
         url: https://www.meetup.com/the-social-programers/events/281199410/
         dtstart: 2021-10-07 18:30:00+02:00
         dtend: 2021-10-07 21:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 14, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: 'Coding session - V3 '
+      image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
+      url: https://www.meetup.com/the-social-programers/events/281374093/
+      ical:
+        summary: 'Coding session - V3 '
+        description: 'The Social Programers
+
+          Thursday, October 14 at 6:30 PM
+
+
+          Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.
+
+
+          https://www.meetup.com/the-social-programers/events/281374093/'
+        location: Café Jedna (Dukelských Hrdinů 530/47, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281374093@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/281374093/
+        dtstart: 2021-10-14 18:30:00+02:00
+        dtend: 2021-10-14 20:30:00+02:00
