--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -156,7 +156,7 @@ series:
         dtstart: 2021-10-20 16:00:00+02:00
         dtend: 2021-10-20 17:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 26, 2021, 6:00 PM: Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na tematickém meetupu, tentokrát konečně naživo (ale samozřejmě i online). Na co se můžete těšit? Popovídáme'
+      meta_description: 'Tue, Oct 26, 2021, 6:00 PM: Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na našem online tematickém meetupu online ( který ale proběhne konečně i naživo). Na co se můžete těšit? Pop'
       og_title: 'Backend meetup: Architektura, mýty o OOP a těžký život backenďáka'
       image: https://secure.meetupstatic.com/photos/event/9/a/6/d/600_499419533.jpeg
       url: https://www.meetup.com/Applifting-meetup-1/events/281354506/
@@ -167,7 +167,7 @@ series:
           Tuesday, October 26 at 6:00 PM
 
 
-          Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na tematickém meetupu, tentokrát konečně naživo (ale samozřejmě i online). Na co se mů...
+          Žijete backendem nebo o něm uvažujete? Pak vás moc rádi uvidíme na našem online tematickém meetupu online ( který ale proběhne konečně i naživo). Na c...
 
 
           https://www.meetup.com/Applifting-meetup-1/events/281354506/'
