--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -155,3 +155,28 @@ series:
         url: https://www.meetup.com/czskppug/events/dgxdqsydccbrb/
         dtstart: 2022-01-13 17:00:00+01:00
         dtend: 2022-01-13 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Feb 10, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Feb 10, 2022, 5:00 PM'
+      image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
+      url: https://www.meetup.com/czskppug/events/dgxdqsydcdbnb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, February 10 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/dgxdqsydcdbnb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dgxdqsydcdbnb@meetup.com
+        url: https://www.meetup.com/czskppug/events/dgxdqsydcdbnb/
+        dtstart: 2022-02-10 17:00:00+01:00
+        dtend: 2022-02-10 19:00:00+01:00
