--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/7/a/0/600_485066528.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 2021, 6:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.There will be two speakers with the following presentations:• GitOps for your infrastr'
+      meta_description: 'Wed, Oct 20, 2021, 6:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.There will be two speakers with the following presentations:• Building event-driven ap'
       og_title: Regular Prague AWS User Group Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/2/f/600_498808207.jpeg
       url: https://www.meetup.com/Prague-AWS-Meetup/events/280751506/
